--- a/AnimalisAndroid/app/src/main/res/layout/content_main.xml
+++ b/AnimalisAndroid/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.arnauddupeyrat.animalis.MainActivity"
+    tools:context=".View.Activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <com.facebook.login.widget.LoginButton
